--- a/소개.html
+++ b/소개.html
@@ -44,247 +44,7 @@
         </div>
 
         <div class="space-gallery" data-space-gallery>
-          <article class="space-card" role="button" tabindex="0" 
-            data-space-type="facility" 
-            data-images="assets/img/유리온실.jpg,assets/img/유리온실2.jpg,assets/img/가든센터.jpg" 
-            data-title="유리 온실"
-            data-space-id="명상스튜디오"
-            data-desc="가시림의 자연에 둘러싸인 유리온실로, 정규 명상 수업이 열리는 공간입니다. 햇빛과 식물이 어우러진 평온한 분위기 속에서 깊은 호흡과 이완을 경험할 수 있습니다.">
-            <figure class="space-card__media">
-              <img src="assets/img/유리온실.jpg" alt="가시림 유리 온실 내부" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">유리 온실</h3>
-              <p class="space-card__summary">정규 명상 수업이 열리는 온실 공간</p>
-            </div>
-          </article>
-
-          <article class="space-card" role="button" tabindex="0" 
-            data-space-type="facility" 
-            data-images="assets/img/가든센터.jpg,assets/img/유리온실.jpg,assets/img/유리온실2.jpg" 
-            data-title="체험장"
-            data-space-id="체험장"
-            data-desc="화분 만들기, 정원 워크숍 등 원예 중심의 체험 프로그램이 운영됩니다. 베테랑 조경 전문가와 함께 식물의 세계를 배우며 특별한 시간을 보내보세요.">
-            <figure class="space-card__media">
-              <img src="assets/img/가든센터.jpg" alt="가시림 가든센터 외관" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">체험장</h3>
-              <p class="space-card__summary">원예 수업과 체험 프로그램이 열리는 공간</p>
-            </div>
-          </article>
-
-          <article class="space-card" role="button" tabindex="0" 
-            data-space-type="facility" 
-            data-images="assets/img/유리온실2.jpg,assets/img/main.jpg,assets/img/카페.jpg" 
-            data-title="식물판매장"
-            data-space-id="식물판매장"
-            data-desc="제주 자생식물을 비롯한 다양한 희귀 식물을 판매합니다. 식물 관리 안내와 함께 택배 및 항공 운송용 포장 서비스를 제공합니다.">
-            <figure class="space-card__media">
-              <img src="assets/img/유리온실2.jpg" alt="식물판매장" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">식물 판매장</h3>
-              <p class="space-card__summary">제주 토종 및 희귀 자생식물 판매</p>
-            </div>
-          </article>
-
-          <article class="space-card" role="button" tabindex="0" 
-            data-space-type="facility" 
-            data-images="assets/img/카페.jpg,assets/img/main.jpg,assets/img/가든센터.jpg" 
-            data-title="카페"
-            data-space-id="카페"
-            data-desc="가시림 수목원의 여유로운 실내 휴식 공간입니다. 곶자왈 정원을 바라보며 스페셜티 차와 프리미엄 로스팅 원두로 내린 커피를 즐길 수 있습니다.">
-            <figure class="space-card__media">
-              <img src="assets/img/카페.jpg" alt="가시림 카페" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">카페</h3>
-              <p class="space-card__summary">곶자왈 정원 뷰의 실내 카페</p>
-            </div>
-          </article>
-
-          <!-- 메타세쿼이아 숲 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/main.jpg,assets/img/유리온실.jpg,assets/img/카페.jpg"
-            data-title="메타세쿼이아 숲"
-            data-desc="곧게 뻗은 메타세쿼이아가 줄지어 선 숲길. 사계절 내내 깊은 숲 향을 느낄 수 있는 대표 산책 코스.">
-            <figure class="space-card__media">
-              <img src="assets/img/main.jpg" alt="메타세쿼이아 숲" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">메타세쿼이아 숲</h3>
-              <p class="space-card__summary">사계절 내내 숲 향을 느끼는 대표 산책 코스.</p>
-            </div>
-          </article>
-
-          <!-- 오름 정원 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/가든센터.jpg,assets/img/유리온실2.jpg,assets/img/main.jpg"
-            data-title="오름 정원"
-            data-desc="제주 오름을 모티프로 설계한 입체 정원. 화산석과 토종 식물이 어우러진 테라스형 공간.">
-            <figure class="space-card__media">
-              <img src="assets/img/가든센터.jpg" alt="오름 정원" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">오름 정원</h3>
-              <p class="space-card__summary">제주 오름 지형을 담은 테라스형 정원.</p>
-            </div>
-          </article>
-
-          <!-- 수국 전망대 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/main.jpg,assets/img/카페.jpg,assets/img/유리온실.jpg"
-            data-title="수국 전망대"
-            data-desc="수국이 피는 계절에 언덕 전경을 한눈에 보는 전망 포인트. 곶자왈과 수목원의 색 변화를 함께 감상.">
-            <figure class="space-card__media">
-              <img src="assets/img/main.jpg" alt="수국 전망대" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">수국 전망대</h3>
-              <p class="space-card__summary">수국이 물드는 계절의 전망 포인트.</p>
-            </div>
-          </article>
-
-          <!-- 팜파스그라스 정원 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/유리온실2.jpg,assets/img/가든센터.jpg,assets/img/main.jpg"
-            data-title="팜파스그라스 정원"
-            data-desc="가을 바람에 흩날리는 팜파스그라스가 장관을 이루는 정원. 빛과 바람이 만드는 포토 스팟.">
-            <figure class="space-card__media">
-              <img src="assets/img/유리온실2.jpg" alt="팜파스그라스 정원" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">팜파스그라스 정원</h3>
-              <p class="space-card__summary">금빛 팜파스그라스가 물결치는 가을 정원.</p>
-            </div>
-          </article>
-
-          <!-- 곶자왈 정원 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/main.jpg,assets/img/유리온실.jpg,assets/img/카페.jpg"
-            data-title="곶자왈 정원"
-            data-desc="제주 곶자왈 식생을 가까이에서 만나는 정원 구역. 다양한 자생 이끼와 아름다운 조경이 어우러진 생태 산책지.">
-            <figure class="space-card__media">
-              <img src="assets/img/main.jpg" alt="곶자왈 정원" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">곶자왈 정원</h3>
-              <p class="space-card__summary">제주 곶자왈 식생을 담은 생태 정원.</p>
-            </div>
-          </article>
-
-          <!-- 나무수국 길 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/main.jpg,assets/img/유리온실.jpg,assets/img/카페.jpg"
-            data-title="나무수국 길"
-            data-desc="여름이면 하얀 나무수국이 만개하는 산책로. 그늘이 좋고 사진 포인트가 많은 코스.">
-            <figure class="space-card__media">
-              <img src="assets/img/main.jpg" alt="나무수국 길" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">나무수국 길</h3>
-              <p class="space-card__summary">여름 수국이 가득한 그늘 산책 코스.</p>
-            </div>
-          </article>
-
-          <!-- 능소화 돌담길 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/유리온실2.jpg,assets/img/main.jpg,assets/img/카페.jpg"
-            data-title="능소화 돌담길"
-            data-desc="주황빛 능소화가 돌담을 타고 흐르는 여름 구간. 제주 전통 풍경을 즐기며 걷는 길.">
-            <figure class="space-card__media">
-              <img src="assets/img/유리온실2.jpg" alt="능소화 돌담길" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">능소화 돌담길</h3>
-              <p class="space-card__summary">주황 능소화가 피는 돌담 산책로.</p>
-            </div>
-          </article>
-
-          <!-- 겹벚꽃나무 숲길 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/가든센터.jpg,assets/img/main.jpg,assets/img/유리온실.jpg"
-            data-title="겹벚꽃나무 숲길"
-            data-desc="봄마다 분홍빛 겹벚꽃이 터널을 이루는 꽃길. 짧은 개화기 동안 가장 인기 있는 촬영 스팟.">
-            <figure class="space-card__media">
-              <img src="assets/img/가든센터.jpg" alt="겹벚나무 숲길" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">겹벚꽃나무 숲길</h3>
-              <p class="space-card__summary">봄에 벚꽃 터널이 되는 꽃길.</p>
-            </div>
-          </article>
-
-          <!-- 동백나무 숲 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/main.jpg,assets/img/유리온실2.jpg,assets/img/가든센터.jpg"
-            data-title="동백나무 숲"
-            data-desc="겨울에 붉게 피어나는 동백꽃이 아름다운 가시림 대표 스팟. 겨울 뿐 아니라 사계절 푸른 그늘이 좋은 휴식 구간.">
-            <figure class="space-card__media">
-              <img src="assets/img/main.jpg" alt="동백나무 숲" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">동백나무 숲</h3>
-              <p class="space-card__summary">겨울 동백꽃이 포인트인 상록 숲.</p>
-            </div>
-          </article>
-
-          <!-- 종가시나무 데크 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/카페.jpg,assets/img/가든센터.jpg,assets/img/유리온실2.jpg"
-            data-title="종가시나무 데크"
-            data-desc="제주 자생 종가시나무 군락을 가까이 관찰하는 데크 구간. 나무 그늘 아래 잠시 쉬어 가기 좋은 포인트.">
-            <figure class="space-card__media">
-              <img src="assets/img/카페.jpg" alt="중가시나무 데크" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">종가시나무 데크</h3>
-              <p class="space-card__summary">제주 자생 종가시나무를 만나는 데크 포인트.</p>
-            </div>
-          </article>
-
-          <!-- 하귤나무 길 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/유리온실2.jpg,assets/img/유리온실.jpg,assets/img/main.jpg"
-            data-title="하귤나무 길"
-            data-desc="제주 고유종 하귤나무가 줄지어 선 과수 산책로.">
-            <figure class="space-card__media">
-              <img src="assets/img/유리온실2.jpg" alt="하귤나무 길" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">하귤나무 길</h3>
-              <p class="space-card__summary">하귤 꽃과 열매를 만나는 과수길.</p>
-            </div>
-          </article>
-
-          <!-- 배롱나무 길 -->
-          <article class="space-card" role="button" tabindex="0"
-            data-space-type="garden"
-            data-images="assets/img/가든센터.jpg,assets/img/카페.jpg,assets/img/유리온실.jpg"
-            data-title="배롱나무 길"
-            data-desc="여름 내내 붉게 피는 백일홍이 길을 수놓는 구간. 강한 햇살에도 오래 즐길 수 있는 꽃길.">
-            <figure class="space-card__media">
-              <img src="assets/img/가든센터.jpg" alt="배롱나무 길" loading="lazy"/>
-            </figure>
-            <div class="space-card__body">
-              <h3 class="space-card__title">배롱나무 길</h3>
-              <p class="space-card__summary">여름 백일홍이 이어지는 대표 꽃길.</p>
-            </div>
-          </article>
-
-
+          <!-- Populated via data/spaces.json -->
         </div>
       </section>
 
@@ -299,41 +59,7 @@
 
       <!-- 둘러 보기 -->
       <section id="둘러보기" class="tab-panel" role="tabpanel" tabindex="0" hidden>
-        <div class="gallery-cards reveal parallax from-up">
-          <article class="card"><img src="assets/img/gallery/pic1.jpg" alt="갤러리 이미지 1" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic2.jpg" alt="갤러리 이미지 2" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic3.jpg" alt="갤러리 이미지 3" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic4.jpg" alt="갤러리 이미지 4" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic5.jpg" alt="갤러리 이미지 5" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic6.jpg" alt="갤러리 이미지 6" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic7.jpg" alt="갤러리 이미지 7" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic8.jpg" alt="갤러리 이미지 8" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic9.jpg" alt="갤러리 이미지 9" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic10.jpg" alt="갤러리 이미지 10" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic11.jpg" alt="갤러리 이미지 11" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic12.jpg" alt="갤러리 이미지 12" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic13.jpg" alt="갤러리 이미지 13" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic14.jpg" alt="갤러리 이미지 14" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic15.jpg" alt="갤러리 이미지 15" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic16.jpg" alt="갤러리 이미지 16" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic17.jpg" alt="갤러리 이미지 17" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic18.jpg" alt="갤러리 이미지 18" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic19.jpg" alt="갤러리 이미지 19" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic20.jpg" alt="갤러리 이미지 20" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic22.jpg" alt="갤러리 이미지 22" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic23.jpg" alt="갤러리 이미지 23" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic24.jpg" alt="갤러리 이미지 24" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic25.jpg" alt="갤러리 이미지 25" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic26.jpg" alt="갤러리 이미지 26" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic27.jpg" alt="갤러리 이미지 27" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic28.jpg" alt="갤러리 이미지 28" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic29.jpg" alt="갤러리 이미지 29" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic30.jpg" alt="갤러리 이미지 30" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic31.jpg" alt="갤러리 이미지 31" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic32.jpg" alt="갤러리 이미지 32" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic33.jpg" alt="갤러리 이미지 33" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic34.jpg" alt="갤러리 이미지 34" class="card-img" /></article>
-          <article class="card"><img src="assets/img/gallery/pic35.jpg" alt="갤러리 이미지 35" class="card-img" /></article>
+        <div class="gallery-cards reveal parallax from-up" data-gallery-cards>
         </div>
       </section>
 
@@ -368,6 +94,7 @@
   <script src="assets/js/includes.js" defer></script>
   <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js" defer></script>
   <script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js" defer></script>
+  <script src="assets/js/cms-data.js" defer></script>
   <script src="assets/js/main.js" defer></script>
   <script src="assets/js/intro-tabs.js" defer></script>
   <script src="assets/js/space-modal.js" defer></script>
