--- a/방문.html
+++ b/방문.html
@@ -43,15 +43,15 @@
         <div class="visit-section visit-section--운영시간" aria-labelledby="section-운영시간">
           <div class="visit-section__header">
             <span class="visit-section__label">Locations &amp; Hours</span>
-            <h2 id="section-운영시간" class="visit-section__title">위치 및 운영 안내</h2>
+            <h2 id="section-운영시간" class="visit-section__title">운영 안내</h2>
           </div>
           <div class="운영시간__grid">
-            <figure class="운영시간__image">
+            <figure class="운영시간__image" data-visit-image>
               <img src="assets/img/ticketoffice.jpg" alt="가시림 매표소 앞 사진" loading="lazy" />
               <figcaption class="운영시간__caption">가시림 입구 및 매표소</figcaption>
             </figure>
             <article class="visit-hours-card" aria-label="운영 정보">
-              <dl class="visit-hours-list">
+              <dl class="visit-hours-list" data-visit-hours-list>
                 <div class="visit-hours-list__item">
                   <dt>주소</dt>
                   <dd>제주특별자치도 서귀포시 표선면 가시리 3266</dd>
@@ -65,7 +65,7 @@
                   <dd>오후 05:30</dd>
                 </div>
               </dl>
-              <div class="visit-hours-alerts" role="status" aria-live="polite">
+              <div class="visit-hours-alerts" role="status" aria-live="polite" data-visit-notes>
                 <div class="visit-hours-alert">
                   <span class="visit-hours-alert__icon" aria-hidden="true">
                     <svg viewBox="0 0 24 24" focusable="false">
@@ -109,7 +109,7 @@
                   <th scope="col">조건</th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody data-visit-rate-body>
                 <tr>
                   <th scope="row">일반</th>
                   <td>6,000원</td>
@@ -147,7 +147,7 @@
             <span class="visit-section__label">Know Before You Go</span>
             <h2 id="section-guides" class="visit-section__title">방문 전 알아두기</h2>
           </div>
-          <div class="visit-guideline-list">
+          <div class="visit-guideline-list" data-visit-guidelines>
             <details class="visit-guideline" open>
               <summary>당일 재입장</summary>
               <div class="visit-guideline__body">
@@ -224,7 +224,7 @@
           <div class="visit-section__header">
             <span class="visit-section__label">Contact</span>
             <h2 id="section-group" class="visit-section__title">단체 예약 및 대관 문의</h2>
-            <p class="visit-section__lead">기업 워크숍, 원예 클래스, 스냅 촬영 등 목적에 맞춘 맞춤형 프로그램과 공간을 제안해 드립니다. 방문 희망일과 인원, 요청 사항과 함께 연락주세요.</p>
+            <p class="visit-section__lead">기업 워크숍, 원예 클래스, 스냅 촬영 등 목적에 맞춘 맞춤형 프로그램과 공간을 제공해 드립니다. 방문 희망일과 인원, 요청 사항과 함께 연락주세요.</p>
           </div>
 
           <div class="visit-section__grid contact-grid">
@@ -250,7 +250,7 @@
               <div class="contact-card__content">
                 <span class="contact-card__label">Phone</span>
                 <a class="contact-card__value" href="tel:07042810906">070-4281-0906</a>
-                <p class="contact-card__note">평일 09:30–17:30 전화 상담, 주말에는 문자로 문의해주세요.</p>
+                <p class="contact-card__note"> 매일 09:30–17:30 전화 상담 가능합니다. (휴무일 제외)</p>
               </div>
             </article>
           </div>
@@ -266,6 +266,7 @@
   <script src="assets/js/includes.js" defer></script>
   <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js" defer></script>
   <script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js" defer></script>
+  <script src="assets/js/cms-data.js" defer></script>
   <script src="assets/js/main.js" defer></script>
   <script src="assets/js/intro-tabs.js" defer></script>
 </body>
